[package]
name = "yring"
version = "0.3.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bounded SPSC ring with ypipe-style batched flush/prefetch"
readme = "README.md"
keywords = ["spsc", "ring-buffer", "lock-free", "zero-copy", "batching"]
categories = ["concurrency", "data-structures"]

[features]
default = []
async = ["dep:atomic-waker", "dep:futures-core"]

[dependencies]
atomic-waker = { version = "1.1.0", optional = true }
futures-core = { version = "0.3", optional = true, default-features = false }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
futures-lite = "2"
loom = "0.7"
rtrb = "0.3"
crossbeam-channel = "0.5"
flume = "0.12"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "comparison"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
