[package]
name = "pyomq"
version = "0.12.2"
edition = "2024"
rust-version = "1.93"
license = "ISC"
authors = ["Patrik Wenger <paddor@gmail.com>"]
repository = "https://github.com/paddor/omq.rs"
description = "Python binding for omq.rs - drop-in pyzmq replacement built on omq-tokio."
publish = false

[lib]
name = "pyomq"
crate-type = ["cdylib"]

[features]
default = []
plain = ["omq-tokio/plain"]
curve = ["omq-tokio/curve"]
blake3zmq = ["omq-tokio/blake3zmq"]
lz4 = ["omq-tokio/lz4"]

[dependencies]
omq-proto = { path = "../../omq-proto", default-features = false }
omq-tokio = { path = "../../omq-tokio", default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "io-util", "net"] }

bytes = "1"
libc = "0.2"
flume = { version = "0.12", default-features = false, features = ["async", "select"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
futures-core = { version = "0.3", default-features = false }
yring = { path = "../../yring", features = ["async"] }

# PyO3 stable ABI: one wheel covers Python 3.9+.
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"] }
