[workspace]

[package]
name = "rzmq_bench_peer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rzmq_bench_peer"
path = "src/main.rs"

[dependencies]
rzmq = { git = "https://github.com/excsn/rzmq.git", rev = "e3e5745", features = ["io-uring", "curve"] }
tokio = { version = "1", features = ["full"] }
