[package]
name = "zguide-compio-01-req-rep"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.7.1", path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg01_echo"
path = "echo.rs"

[[bin]]
name = "zg01_broker"
path = "broker.rs"

[[bin]]
name = "zg01_client"
path = "client.rs"

[[bin]]
name = "zg01_worker"
path = "worker.rs"



[lints]
workspace = true
