[package]
name = "zguide-compio-01-req-rep"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-compio = { path = "../../../omq-compio" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "cf746eb8", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg01_echo"
path = "echo.rs"

[[bin]]
name = "zg01_broker"
path = "broker.rs"

[[bin]]
name = "zg01_client"
path = "client.rs"

[[bin]]
name = "zg01_worker"
path = "worker.rs"



[lints]
workspace = true
