[package]
name = "zguide-compio-02-pub-sub"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-compio = { path = "../../../omq-compio" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "cf746eb8", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg02_publisher"
path = "publisher.rs"

[[bin]]
name = "zg02_subscriber"
path = "subscriber.rs"

[[bin]]
name = "zg02_proxy"
path = "proxy.rs"



[lints]
workspace = true
