[package]
name = "zguide-compio-04-lazy-pirate"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg04_server"
path = "server.rs"

[[bin]]
name = "zg04_client"
path = "client.rs"



[lints]
workspace = true
