[package]
name = "zguide-compio-04-lazy-pirate"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-compio = { path = "../../../omq-compio" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "cf746eb8", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg04_server"
path = "server.rs"

[[bin]]
name = "zg04_client"
path = "client.rs"



[lints]
workspace = true
