[package]
name = "zguide-compio-05-heartbeat"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.8.1", path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg05_publisher"
path = "publisher.rs"

[[bin]]
name = "zg05_monitor"
path = "monitor.rs"



[lints]
workspace = true
