[package]
name = "zguide-compio-05-heartbeat"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-compio = { path = "../../../omq-compio" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "cf746eb8", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg05_publisher"
path = "publisher.rs"

[[bin]]
name = "zg05_monitor"
path = "monitor.rs"



[lints]
workspace = true
