[package]
name = "zguide-compio-06-last-value-cache"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.13.0", path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg06_cache"
path = "cache.rs"

[[bin]]
name = "zg06_publisher"
path = "publisher.rs"

[[bin]]
name = "zg06_subscriber"
path = "subscriber.rs"



[lints]
workspace = true
