[package]
name = "zguide-compio-07-clone"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.12.1", path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg07_server"
path = "server.rs"

[[bin]]
name = "zg07_client"
path = "client.rs"



[lints]
workspace = true
