[package]
name = "zguide-compio-08-majordomo"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.10.0", path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg08_broker"
path = "broker.rs"

[[bin]]
name = "zg08_worker"
path = "worker.rs"

[[bin]]
name = "zg08_client"
path = "client.rs"



[lints]
workspace = true
