[package]
name = "zguide-compio-08-majordomo"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-compio = { path = "../../../omq-compio" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "cf746eb8", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg08_broker"
path = "broker.rs"

[[bin]]
name = "zg08_worker"
path = "worker.rs"

[[bin]]
name = "zg08_client"
path = "client.rs"



[lints]
workspace = true
