[package]
name = "zguide-compio-09-titanic"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.8.0", path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg09_frontend"
path = "frontend.rs"

[[bin]]
name = "zg09_dispatcher"
path = "dispatcher.rs"

[[bin]]
name = "zg09_client"
path = "client.rs"



[lints]
workspace = true
