[package]
name = "zguide-compio-10-binary-star"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.12.1", path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg10_primary"
path = "primary.rs"

[[bin]]
name = "zg10_backup"
path = "backup.rs"

[[bin]]
name = "zg10_client"
path = "client.rs"



[lints]
workspace = true
