[package]
name = "zguide-compio-11-freelance"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.10.0", path = "../../../omq" }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "453ed63", features = ["macros", "runtime", "time"] }
bytes = "1"

[[bin]]
name = "zg11_server"
path = "server.rs"

[[bin]]
name = "zg11_client_sequential"
path = "client_sequential.rs"

[[bin]]
name = "zg11_client_shotgun"
path = "client_shotgun.rs"

[[bin]]
name = "zg11_client_tracked"
path = "client_tracked.rs"



[lints]
workspace = true
