[package]
name = "zguide-tokio-01-req-rep"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-tokio = { version = "0.14.1", path = "../../../omq-tokio" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
bytes = "1"

[[bin]]
name = "zg01_echo"
path = "echo.rs"

[[bin]]
name = "zg01_broker"
path = "broker.rs"

[[bin]]
name = "zg01_client"
path = "client.rs"

[[bin]]
name = "zg01_worker"
path = "worker.rs"



[lints]
workspace = true
