[package]
name = "zguide-tokio-02-pub-sub"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.9.0", path = "../../../omq", default-features = false, features = ["tokio-backend"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
bytes = "1"

[[bin]]
name = "zg02_publisher"
path = "publisher.rs"

[[bin]]
name = "zg02_subscriber"
path = "subscriber.rs"

[[bin]]
name = "zg02_proxy"
path = "proxy.rs"



[lints]
workspace = true
