[package]
name = "zguide-tokio-03-pipeline"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.12.0", path = "../../../omq", default-features = false, features = ["tokio-backend"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
bytes = "1"

[[bin]]
name = "zg03_ventilator"
path = "ventilator.rs"

[[bin]]
name = "zg03_worker"
path = "worker.rs"

[[bin]]
name = "zg03_sink"
path = "sink.rs"



[lints]
workspace = true
