[package]
name = "zguide-tokio-03-pipeline"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-tokio = { version = "0.19.1", path = "../../../omq-tokio" }
tokio = { version = "1", features = ["rt", "macros", "time"] }
bytes = "1"

[[bin]]
name = "zg03_ventilator"
path = "ventilator.rs"

[[bin]]
name = "zg03_worker"
path = "worker.rs"

[[bin]]
name = "zg03_sink"
path = "sink.rs"



[lints]
workspace = true
