[package]
name = "zguide-tokio-04-lazy-pirate"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq = { version = "0.9.0", path = "../../../omq", default-features = false, features = ["tokio-backend"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
bytes = "1"

[[bin]]
name = "zg04_server"
path = "server.rs"

[[bin]]
name = "zg04_client"
path = "client.rs"



[lints]
workspace = true
