[package]
name = "zguide-tokio-04-lazy-pirate"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-tokio = { version = "0.19.3", path = "../../../omq-tokio" }
tokio = { version = "1", features = ["rt", "macros", "time"] }
bytes = "1"

[[bin]]
name = "zg04_server"
path = "server.rs"

[[bin]]
name = "zg04_client"
path = "client.rs"



[lints]
workspace = true
