[package]
name = "zguide-tokio-05-heartbeat"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
omq-tokio = { version = "0.14.3", path = "../../../omq-tokio" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
bytes = "1"

[[bin]]
name = "zg05_publisher"
path = "publisher.rs"

[[bin]]
name = "zg05_monitor"
path = "monitor.rs"



[lints]
workspace = true
